--- a/budget_tracker/public/index.html
+++ b/budget_tracker/public/index.html
@@ -11,6 +11,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Budget Tracker">
     <link rel="apple-touch-icon" href="/img/icons/icon-152x152.png">
+	<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js"></script>
     <title>Budget Tracker App</title>
   </head>
   <body>
